[package]
name = "wte"
version = "0.0.1"
authors = ["Black Phlox <bphlox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.6.2"
linked-hash-map = "0.5.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[patch.crates-io]
dialoguer = { path = 'dialoguer' }