[package]
name = "wte"
version = "0.0.1"
authors = ["Black Phlox <bphlox@gmail.com>"]
edition = "2018"
keywords = ["cli", "editor", "menu", "prompt", "windows", "terminal", "json", "schema"]
license = "MIT"
homepage = "https://github.com/BlackPhlox/wte"
repository = "https://github.com/BlackPhlox/wte"
documentation = "https://github.com/BlackPhlox/wte/wiki"
readme = "README.md"

[dependencies]
dialoguer = "0.6.2"
linked-hash-map = "0.5.3"
lazy_static = "1"
css-color-parser = "0.1.2"
colors-transform ="0.2.11"
webbrowser = "0.5.4"
console ="0.11.3"
rust-embed = "5.5.1"
uuid = "0.8.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[patch.crates-io]
dialoguer = { path = 'dialoguer' }
css-color-parser = { path = 'css-color-parser-rs' }